--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,101 @@
-html,
-body {
+* {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
   box-sizing: border-box;
+}
+
+body {
+  background-color: #eee;
+  min-height: 100vh;
+}
+.the-form {
+  display: flex;
+  flex-direction: column;
+  height: 200px;
+  width: 300px;
+  justify-content: space-around;
+}
+
+.the-form input {
+  padding: 10px 10px;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+  transition: 0.2s;
+  box-shadow: 0 0 1px 2px #fff;
+}
+.the-form input:focus {
+  box-shadow: 0 0 1px 2px rgb(110, 204, 133);
+}
+.the-form input::placeholder {
+  color: rgb(196, 196, 196);
+}
+
+.the-form button {
+  padding: 10px;
+  background-color: rgb(98, 194, 122);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 20px;
+  box-shadow: 0 0 1px 2px rgb(110, 204, 133);
+}
+
+.form-wrapper {
+  margin-right: 10px;
+  box-shadow: 10px 0 20px rgb(211, 211, 211);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+  transform: translateX(-100%);
+  height: 100vh;
+  animation: in 2s ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+@keyframes in {
+  from {
+    transform: translateX(-100%);
+    box-shadow: 100px 0 100px rgb(211, 211, 211);
+  }
+  to {
+    transform: translateX(0%);
+    box-shadow: 10px 0 10px rgb(233, 233, 233);
+  }
+}
+
+.home {
+  display: flex;
+  height: 100%;
+}
+
+.list {
+  overflow: scroll;
+  flex: 1;
+  animation: in2 2s ease-in-out 2s;
+  transform: translateX(100%);
+  animation-fill-mode: forwards;
+}
+@keyframes in2 {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
+}
+ul {
+  list-style: none;
+  margin: 10px;
+}
+
+ul li {
+  background-color: rgb(253, 253, 253);
+  margin-bottom: 20px;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 2px 2px #fff;
 }
